# libigl

./: CMakeLists.txt
include/igl/: ply.h
optional/: CMakeLists.txt
shared/cmake/: libigl-config.cmake.in  libigl.cmake
